Search and language menu collaps fix

--- a/sources/stylesheets/_header.scss
+++ b/sources/stylesheets/_header.scss
@@ -214,3 +214,5 @@
    .front-page .js-header-right { width: 100%; }
    .front-page .header-container { padding-left: 40px;padding-right: 40px;}
  }
+
+ .front-page .flex-item { white-space: nowrap;}  
